@@ -4,3 +4,4 @@ Jiaming Lin <robin890650@gmail.com>
 Tong Li <litong01@us.ibm.com>
 Xiao Tan <xt85@cornell.edu>
 spzala <spzala@us.ibm.com>
+xiaotan2 <xiaotan2@uw.edu>
