@@ -12,6 +12,7 @@ dispatcher = alarmdefinitions
 dispatcher = notificationmethods
 dispatcher = alarms
 dispatcher = meters
+dispatcher = samples
 
 [metrics]
 topic = metrics
