@@ -51,6 +51,7 @@ kiloeyes.dispatcher =
     notificationmethods = kiloeyes.v2.elasticsearch.notificationmethods:NotificationMethodDispatcher
     alarms = kiloeyes.v2.elasticsearch.alarms:AlarmDispatcher
     meters = kiloeyes.v2.elasticsearch.meters:MeterDispatcher
+    samples = kiloeyes.v2.elasticsearch.samples:CeilometerSampleDispatcher
 
 kiloeyes.index.strategy =
     timed = kiloeyes.microservice.timed_strategy:TimedStrategy
